--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	
+	<header id="header">
+		<div class="company-logo-img">
+			<img src="https://icon-icons.com/icons2/663/PNG/128/trombone_icon-icons.com_60178.png" alt="" id="header-img">
+		</div>
+		<nav id="nav-bar">
+			<ul>
+				<li>
+					<a href="" class="nav-link">Features</a>
+				</li>
+				<li>
+					<a href="" class="nav-link">How it works</a>
+				</li>
+				<li>
+					<a href="" class="nav-link"></a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 </body>
 </html>
