--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<header id="header">
 		<div class="company-logo-img">
-			<img src="https://icon-icons.com/icons2/663/PNG/128/trombone_icon-icons.com_60178.png" alt="" id="header-img">
+			<img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="" id="header-img">
 		</div>
 		<nav id="nav-bar">
 			<ul>
@@ -16,13 +16,15 @@
 					<a href="" class="nav-link">Features</a>
 				</li>
 				<li>
-					<a href="" class="nav-link">How it works</a>
+					<a href="" class="nav-link">How It Works</a>
 				</li>
 				<li>
-					<a href="" class="nav-link"></a>
+					<a href="" class="nav-link">Pricing</a>
 				</li>
 			</ul>
 		</nav>
 	</header>
+	<iframe id="video" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
+	</iframe>
 </body>
 </html>
