--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<iframe id="video" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
 	</iframe>
 	<form action="" id="form" method="post">
-		<input type="email" id="email">
+		<input type="email" id="email" placeholder="username@domen.com">
 	</form>
 </body>
 </html>
