added alt to the image logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<header id="header">
 		<div class="company-logo-img">
-			<img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="" id="header-img">
+			<img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="Company#s logo" id="header-img">
 		</div>
 		<nav id="nav-bar">
 			<ul>
@@ -28,6 +28,7 @@
 	</iframe>
 	<form action="" id="form" method="post">
 		<input type="email" id="email" placeholder="username@domen.com" required>
+		<input type="button" id="submit">
 	</form>
 </body>
 </html>
