--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 	</header>
 	<iframe id="video" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
 	</iframe>
-	<form action="" id="form" method="post">
+	<form action="https://www.freecodecamp.com/email-submit" id="form" method="post">
 		<input type="email" id="email" placeholder="username@domen.com" required>
-		<input type="button" id="submit">
+		<input type="submit" id="submit">
 	</form>
 </body>
 </html>
