value for input and placed nav bar to he top
- added value to input submit element
- placed nav bar to the top of the viewport

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</iframe>
 	<form action="https://www.freecodecamp.com/email-submit" id="form" method="post">
 		<input type="email" id="email" placeholder="username@domen.com" required>
-		<input type="submit" id="submit">
+		<input type="submit" id="submit" value="Get started">
 	</form>
 </body>
 </html>
