--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</ul>
 		</nav>
 	</header>
-	<iframe id="video" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
+	<iframe id="video" width="600" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
 	</iframe>
 	<form action="https://www.freecodecamp.com/email-submit" id="form" method="post">
 		<input type="email" id="email" placeholder="username@domen.com" required>
