added  email-section and changed body margin

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Landing Page</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -24,11 +24,15 @@
 			</ul>
 		</nav>
 	</header>
+	<section id="email-section">
+		<form action="https://www.freecodecamp.com/email-submit" id="form" method="post">
+			<input type="email" id="email" placeholder="username@domen.com" required>
+			<input type="submit" id="submit" value="Get started">
+		</form>
+	</section>
+	
 	<iframe id="video" width="600" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
 	</iframe>
-	<form action="https://www.freecodecamp.com/email-submit" id="form" method="post">
-		<input type="email" id="email" placeholder="username@domen.com" required>
-		<input type="submit" id="submit" value="Get started">
-	</form>
+	
 </body>
 </html>
