--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 		</nav>
 	</header>
 	<section id="email-section">
+		<h2>Handcrafted, home-made masterpieces</h2>
 		<form action="https://www.freecodecamp.com/email-submit" id="form" method="post">
-			<input type="email" id="email" placeholder="username@domen.com" required>
+			<input type="email" id="email" placeholder="Enter your email please" required>
 			<input type="submit" id="submit" value="Get started">
 		</form>
 	</section>
