added features section and icons

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<nav id="nav-bar">
 			<ul>
 				<li>
-					<a href="" class="nav-link">Features</a>
+					<a href="#features" class="nav-link">Features</a>
 				</li>
 				<li>
-					<a href="" class="nav-link">How It Works</a>
+					<a href="#video" class="nav-link">How It Works</a>
 				</li>
 				<li>
 					<a href="" class="nav-link">Pricing</a>
@@ -30,6 +30,33 @@
 			<input type="email" id="email" placeholder="Enter your email please" required>
 			<input type="submit" id="submit" value="Get started">
 		</form>
+	</section>
+	<section id="features">
+		<div>
+			<img id="left" src="icons/fire.png" alt="fire icon">
+			<div id="sub-section">
+				<h3>Premium Materials</h3>
+				<p>Our trombones use the shiniest brass which is sourced locally. 
+				This will increase the longevity of your purchase.</p>
+			</div>
+		</div>
+		<div>
+			<img id="left" src="icons/truck.png" alt="truck icon">
+			<div id="sub-section">
+				<h3>Fast Shipping</h3>
+				<p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+			</div>
+		</div>
+		<div>
+			<div id="left">
+				<img src="icons/battery.png" alt="buttery icon">	
+			</div>
+			
+			<div id="sub-section">
+				<h3>Quality Assurance</h3>
+				<p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+			</div>
+		</div>
 	</section>
 	
 	<iframe id="video" width="600" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
