--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<a href="#video" class="nav-link">How It Works</a>
 				</li>
 				<li>
-					<a href="" class="nav-link">Pricing</a>
+					<a href="#pricing-section" class="nav-link">Pricing</a>
 				</li>
 			</ul>
 		</nav>
@@ -59,8 +59,54 @@
 		</div>
 	</section>
 	
-	<iframe id="video" width="600" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
-	</iframe>
+	<section id="video-section">
+		<iframe id="video" width="600" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen>
+		</iframe>
+	</section>
+	
+	<section id="pricing-section">
+		<div id="tenor">
+			<div class="level">Tenor Trombone</div>
+			<h3>$600</h3>
+			<ul>
+				<li>Lorem ipsum dolor sit amet.</li>
+				<li>Lorem ipsum dolor sit.</li>
+				<li>Lorem ipsum dolor sit amet.</li>
+				<li>Lorem ipsum dolor.</li>
+			</ul>
+			<input type="button" value="select">
+		</div>
+		<div id="bass">
+			<div class="level">Bass Trombone</div>
+			<h3>$900</h3>
+			<ul>
+				<li>Lorem ipsum dolor sit amet.</li>
+				<li>Lorem ipsum dolor sit.</li>
+				<li>Lorem ipsum dolor sit amet.</li>
+				<li>Lorem ipsum dolor.</li>
+			</ul>
+			<input type="button" value="select">
+		</div>
+		<div id="valve">
+			<div class="level">Valve Trombone</div>
+			<h3>$1200</h3>
+			<ul>
+				<li>Lorem ipsum dolor sit amet.</li>
+				<li>Lorem ipsum dolor sit.</li>
+				<li>Lorem ipsum dolor sit amet.</li>
+				<li>Lorem ipsum dolor.</li>
+			</ul>
+			<input type="button" value="select">
+		</div>
+	</section>
+	<footer>
+		<ul id="footer-list">
+			<li>Privacy</li>
+			<li>Terms</li>
+			<li>Contact</li>
+		</ul>
+	</footer>
+
 	
 </body>
 </html>
