changed px to em
Changed px to em
Added meda for small displays

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 			<li>Terms</li>
 			<li>Contact</li>
 		</ul>
+		<div id="copyright">Copyright 2016, Original Trombones</div>
 	</footer>
 
 	
