The last changes to match with freeCodeCamp tasks.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<section id="email-section">
 		<h2>Handcrafted, home-made masterpieces</h2>
 		<form action="https://www.freecodecamp.com/email-submit" id="form" method="post">
-			<input type="email" id="email" placeholder="Enter your email please" required>
+			<input type="email" id="email" name="" placeholder="Enter your email please" required>
 			<input type="submit" id="submit" value="Get started">
 		</form>
 	</section>
